Created REST API with get, put, delete endpoints, some unimportant changes.